@@ -252,7 +252,7 @@
 						<tr>
 							<td><input type="checkbox" id="steam"><label for="steam">Steam</label></td>
 							<td><input type="checkbox" id="amazonus"><label for="amazonus">Amazon US</label></td>
-							<td><input type="checkbox" id="impulse"><label for="impulse">GameStop PC</label></td>
+							<td><input type="checkbox" id="impulse"><label for="impulse">GameStop</label></td>
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="newegg"><label for="newegg">Newegg</label></td>
@@ -260,8 +260,8 @@
 							<td><input type="checkbox" id="squenix"><label for="squenix">Square Enix</label></td>
 						</tr>
 						<tr>
-							<td><input type="checkbox" id="origin"><label for="origin">Origin PC</label></td>
-							<td><input type="checkbox" id="uplay"><label for="uplay">Uplay PC</label></td>
+							<td><input type="checkbox" id="origin"><label for="origin">Origin</label></td>
+							<td><input type="checkbox" id="uplay"><label for="uplay">Uplay</label></td>
 							<td><input type="checkbox" id="indiegalastore"><label for="indiegalastore">IndieGala Store</label></td>
 						</tr>
 						<tr>
@@ -281,7 +281,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="indiegamestand"><label for="indiegamestand">IndieGameStand</label></td>
-							<td><input type="checkbox" id="coinplay"><label for="coinplay">Coinplay.io</label></td>
+							<td><input type="checkbox" id="chrono"><label for="chrono">Chrono.gg</label></td>
 							<td><input type="checkbox" id="fireflower"><label for="fireflower">FireFlower</label></td>
 						</tr>
 						<tr>
@@ -296,6 +296,7 @@
 						</tr>
 						<tr>
 							<td><input type="checkbox" id="dreamgame"><label for="dreamgame">Dreamgame</label></td>
+							<td><input type="checkbox" id="savemi"><label for="savemi">Savemi</label></td>
 						</tr>
 					</table>
 					<li></li>
